--- a/app/_scss/sitewide/base.scss
+++ b/app/_scss/sitewide/base.scss
@@ -1,3 +1,14 @@
+$largest_font: 1.2em;
+$large_font: 1.15em;
+$medium_font: 1.1em;
+$small_font: 1.05em;
+
+$large_spacing: 0.04em;
+$small_spacing: 0.03em;
+
+$large_lineheight: 1.8em;
+$small_lineheight: 1.7em;
+
 html, body {
 	width: 100%; height: 100%;
 	background-color: #e8e8e8;
@@ -28,21 +39,15 @@ h2 {
 }
 
 p {
-	font-size: 1.2em;
-	line-height: 1.7em;
+	font-size: $largest_font;
+	letter-spacing: $large_spacing;
+	line-height: $small_lineheight;
 	padding: 1em 0;
-	letter-spacing: 0.04em;
 }
 
 time {
 	font-size: 1em;
 	padding-top: 0.15em;
-}
-
-address {
-	font-size: 1.1em;
-	font-style: normal;
-	line-height: 1.2em;
 }
 
 blockquote {
@@ -158,7 +163,7 @@ figure {
 
 @media (max-width: 1299px) {
 	p {
-		font-size: 1.15em;
+		font-size: $large_font;
 	}
 
 	h1 {
@@ -190,8 +195,8 @@ figure {
 	}
 
 	p {
-		font-size: 1.1em;
-		line-height: 1.8em;
+		font-size: $medium_font;
+		line-height: $large_lineheight;
 		padding: 0.6em 0;
 	}
 
@@ -218,9 +223,9 @@ figure {
 
 @media (max-width: 499px) {
 	p {
-		font-size: 1.05em;
-		letter-spacing: 0.03em;
-		line-height: 1.7em;
+		font-size: $small_font;
+		letter-spacing: $small_spacing;
+		line-height: $small_lineheight;
 	}
 
 	hr {
